--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
+    "@vueuse/core": "^10.1.2",
     "ant-design-vue": "^3.2.17",
     "axios": "^1.3.5",
     "countup.js": "^2.6.0",
