--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "./src/main.ts",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
@@ -14,9 +15,8 @@
     "ant-design-vue": "^3.2.17",
     "axios": "^1.3.5",
     "countup.js": "^2.6.0",
+    "dayjs": "^1.11.9",
     "echarts": "^5.4.2",
-    "less": "^4.1.3",
-    "less-loader": "^11.1.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.34",
     "sortablejs": "^1.15.0",
@@ -26,9 +26,13 @@
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@vitejs/plugin-vue": "^4.1.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "typescript": "^4.9.3",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.2.0",
+    "vite-plugin-cdn-import": "^0.3.5",
+    "vite-plugin-mkcert": "^1.16.0",
     "vue-tsc": "^1.2.0"
   }
 }
