--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "noImplicitAny": true, // 没有隐式的any
+    "noImplicitAny": false, // 允许隐式的any
     "strictNullChecks": true, // 严格的null与undefined检查
     "noFallthroughCasesInSwitch": true, // 防止在switch代码块里的两个case之间忘记添加break语句。
     "noImplicitThis": false // 允许this有隐式的any类型
