--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "type": "module",
   "main": "./src/main.ts",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "dev": "vite --mode dev",
+    "dev:prod": "vite --mode production",
+    "build": "vue-tsc && vite build --mode production",
+    "build:dev": "vue-tsc && vite build --mode dev",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/icons-vue": "^6.1.0",
-    "@vueuse/core": "^10.1.2",
-    "ant-design-vue": "^3.2.17",
+    "@ant-design/icons-vue": "^7.0.1",
+    "@vueuse/core": "^6.1.0",
+    "ant-design-vue": "^3.2.20",
     "axios": "^1.3.5",
     "countup.js": "^2.6.0",
     "dayjs": "^1.11.9",
@@ -34,5 +36,8 @@
     "vite-plugin-cdn-import": "^0.3.5",
     "vite-plugin-mkcert": "^1.16.0",
     "vue-tsc": "^1.2.0"
+  },
+  "volta": {
+    "node": "16.18.0"
   }
 }
