--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pinia": "^2.0.34",
     "sortablejs": "^1.15.0",
     "vue": "^3.2.47",
+    "vue-i18n": "^9.9.1",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
