--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@vercel/analytics": "^1.2.2",
     "@vueuse/core": "^6.1.0",
     "ant-design-vue": "^3.2.20",
     "axios": "^1.3.5",
