--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "countup.js": "^2.6.0",
     "dayjs": "^1.11.9",
     "echarts": "^5.4.2",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.34",
     "sortablejs": "^1.15.0",
@@ -27,6 +28,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
     "@types/node": "^18.15.11",
     "@vitejs/plugin-vue": "^4.1.0",
     "less": "^4.1.3",
