--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@vitejs/plugin-vue": "^4.1.0",
+    "autoprefixer": "^10.4.18",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "postcss": "^8.4.36",
+    "tailwindcss": "^3.4.1",
     "typescript": "^4.9.3",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.2.0",
