优化部分 对接菜单接口

--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,11 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "https://pirate-api.bqrlm.cn/admin/login/$1"
+    }
   ]
 }
