--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "https://pirate-api.bqrlm.cn/$1"
+      "src": "/api/(.*)",
+      "dest": "https://pirate-api.bqrlm.cn/api/$1"
     }
   ],
   "rewrites": [
