--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,13 @@
     {
       "src": "/api/(.*)",
       "dest": "https://pirate-api.bqrlm.cn/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "headers": {
+        "cache-control": "s-maxage=1000"
+      },
+      "dest": "/index.html"
     }
   ]
 }
