fix: 修复 404 页面 当浏览器没有历史记录时，没有跳转页面问题，默认回到首页 feat: 新增CRUD表单的详情弹窗逻辑, 可使用displayDetailModal 控制是否显示

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       ]
     },
     "types": [
-      "vite/client"
+      "vite/client",
+      "node"
     ],
     // 允许隐式的any
     "noImplicitAny": false,
