--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript": "^4.9.3",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.10",
+    "vite-plugin-auto-export": "^0.0.1",
     "vite-plugin-cdn-import": "^1.0.1",
     "vite-plugin-mkcert": "^1.16.0",
     "vue-tsc": "^2.0.14"
