reflector: 重构nav 保存

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       ]
     },
     "types": [
+      "vue-router",
       "vite/client",
       "node"
     ],
@@ -41,7 +42,7 @@
     "src/**/*.d.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
-    "types/env.d.ts",
+    "types/env.d.ts"
   ],
   "references": [
     {
